UPDATE: actualizamos POST crear-producto con la verificación de usuario.